2000-08-28 15:00 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * include/hbcomp.h
     + Added: extern void hb_compDeclaredParameterAdd( char * szVarName, BYTE cValueType );

   * source/compiler/harbour.y
     ! Changed hb_compVariableAdd() to hb_compDeclaredParameterAdd() for Declaration Rules.

   * source/compiler/harbour.c
     ! Moved logic from hb_compVariableAdd() to new hb_compDeclaredParameterAdd() for "dummy" variables (Declaration Parameters).

   * source/compiler/hbpcode.c
     ! Minor corrections.

2000-08-28 12:03 UTC+0800 Brian Hays <bhays@abacuslaw.com>
   * contrib/rdd_ads/doc/en/readme.txt
      * small formatting changes
   * contrib/rdd_ads/adsfunc.c
      * adsKeyCount:
         fixed parameter checking to look at ISNIL/ISNUM instead of pcount
            (had a bug if called adsKeyCount(,,ADS_RESPECTFILTERS))
      * adsCustomizeAOF:
         fixed parameter checks and retrieval of a record# as a long
         fixed array reference to 0 for first element in C array
   * doc/en/idle.txt
      * misc. grammar fixes
   * doc/en/misc.txt
      * removed a stray character

2000-08-28 10:35 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * source/compiler/harbour.c
   * source/compiler/harbour.y
     + Added support for DECLARE FunName(...) AS CLASS ClassName
     + Added support for DECLARE FunName( ... @SomeFun() ... ) - Function Pointer declared parameter.

   * source/compiler/simplex.c
     * Corrected some compiler warnings.

   * source/compiler/harbour.slx
     * Reenabled support for ID_ON_HOLD.

   * include/hberror.h
     + Added: #define HB_COMP_WARN_RETURN_SUSPECT             28

   * source/compiler/hbgenerr.c
     + Added: "4Suspecious return type: \'%s\' expected: \'%s\'"

   * source/compiler/hbpcode.c
     + Completed support for Strong Typed variables as declared classes, as well as Adaptive Typed usage with declared classes.
     * Few other corrections and enhancements.

   * include/hbclass.ch
     + Added TClass declaration: